--- a/tri-state-key/tri-state-key_daemon.rc
+++ b/tri-state-key/tri-state-key_daemon.rc
@@ -1,7 +1,10 @@
 on fs
-    start tri-state-key_daemon
+    chown system system /sys/devices/platform/soc/soc:tri_state_key/hall_data_calib
+    chown system system /mnt/vendor/persist/engineermode/tri_state_hall_data
 
-service tri-state-key_daemon /system/bin/tri-state-key_daemon
+    start vendor.tri-state-key_daemon
+
+service vendor.tri-state-key_daemon /vendor/bin/tri-state-key_daemon
     class late_start
     user system
     group system uhid
