--- a/livedisplay/vendor.lineage.livedisplay@2.0-service.oneplus_kona.rc
+++ b/livedisplay/vendor.lineage.livedisplay@2.0-service.oneplus_kona.rc
@@ -14,10 +14,7 @@ on init
     chmod 0666 /sys/class/drm/card0-DSI-1/native_display_srgb_color_mode
     chmod 0666 /sys/class/drm/card0-DSI-1/native_display_wide_color_mode
 
-on post-fs-data
-    mkdir /data/misc/display 0770 system graphics
-
-service livedisplay-hal-2-0 /system/bin/hw/lineage.livedisplay@2.0-service.oneplus_kona
+service vendor.livedisplay-hal-2-0 /vendor/bin/hw/vendor.lineage.livedisplay@2.0-service.oneplus_kona
     class hal
     user system
     group system
