--- a/touch/vendor.lineage.touch@1.0-service.oneplus_kona.rc
+++ b/touch/vendor.lineage.touch@1.0-service.oneplus_kona.rc
@@ -28,7 +28,7 @@ on boot
     chown system system /proc/touchpanel/up_swipe_enable
     chown system system /proc/touchpanel/single_tap_enable
 
-service touch-hal-1-0 /system/bin/hw/lineage.touch@1.0-service.oneplus_kona
+service vendor.touch-hal-1-0 /vendor/bin/hw/vendor.lineage.touch@1.0-service.oneplus_kona
     class hal
     user system
     group system
