sm8250-common: Restrict DSDS to intl variants
Change-Id: I8858ca1ce05a3354acea8f322bb34cc2192d81f5

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -273,3 +273,12 @@ service dcvs-sh /vendor/bin/init.qti.dcvs.sh
 
 on property:vendor.dcvs.prop=1
    start dcvs-sh
+
+on property:ro.boot.project_codename=instantnoodle
+    setprop persist.radio.multisim.config dsds
+
+on property:ro.boot.project_codename=instantnoodlep
+    setprop persist.radio.multisim.config dsds
+
+on property:ro.boot.project_codename=kebab
+    setprop persist.radio.multisim.config dsds
