--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -73,6 +73,11 @@ on fs
     restorecon_recursive /mnt/vendor/persist
     mkdir /mnt/vendor/persist/data 0700 system system
 
+    # Brightness
+    chmod 0666 /sys/class/drm/card0-DSI-1/hbm
+    chmod 0666 /sys/class/drm/card0-DSI-1/hbm_brightness
+    chmod 0666 /sys/class/backlight/panel0-backlight/brightness
+
 on post-fs
     # set RLIMIT_MEMLOCK to 64MB
     setrlimit 8 67108864 67108864
@@ -125,32 +130,58 @@ on boot
     chmod 0644 /d/regmap/0-0034/registers
     chmod 0644 /d/regmap/0-0035/registers
     chmod 0644 /d/regmap/0-0042/registers
-#display add 2018/10/19  @lichao_display
+
+    # Display
     chmod 0666 /sys/class/drm/card0-DSI-1/SRGB
+    chown system system /sys/class/drm/card0-DSI-1/SRGB
     chmod 0666 /sys/class/drm/card0-DSI-1/DCI_P3
+    chown system system /sys/class/drm/card0-DSI-1/DCI_P3
     chmod 0666 /sys/class/drm/card0-DSI-1/hbm
+    chown system system /sys/class/drm/card0-DSI-1/hbm
+    chmod 0666 /sys/class/drm/card0-DSI-1/op_friginer_print_hbm
+    chown system system /sys/class/drm/card0-DSI-1/op_friginer_print_hbm
     chmod 0666 /sys/class/drm/card0-DSI-1/aod
+    chown system system /sys/class/drm/card0-DSI-1/aod
     chmod 0666 /sys/class/drm/card0-DSI-1/night_mode
+    chown system system /sys/class/drm/card0-DSI-1/night_mode
     chmod 0666 /sys/class/drm/card0-DSI-1/panel_serial_number
+    chown system system /sys/class/drm/card0-DSI-1/panel_serial_number
     chmod 0666 /sys/class/drm/card0-DSI-1/oneplus_mode
+    chown system system /sys/class/drm/card0-DSI-1/oneplus_mode
     chmod 0666 /sys/class/drm/card0-DSI-1/adaption_mode
+    chown system system /sys/class/drm/card0-DSI-1/adaption_mode
     chmod 0666 /sys/class/drm/card0-DSI-1/notify_fppress
+    chown system system /sys/class/drm/card0-DSI-1/notify_fppress
     chmod 0666 /sys/class/drm/card0-DSI-1/dim_alpha
+    chown system system /sys/class/drm/card0-DSI-1/dim_alpha
     chmod 0666 /sys/class/drm/card0-DSI-1/notify_dim
+    chown system system /sys/class/drm/card0-DSI-1/notify_dim
     chmod 0666 /sys/class/drm/card0-DSI-1/notify_aod
+    chown system system /sys/class/drm/card0-DSI-1/notify_aod
     chmod 0666 /sys/class/drm/card0-DSI-1/force_screenfp
+    chown system system /sys/class/drm/card0-DSI-1/force_screenfp
     chmod 0666 /sys/class/drm/card0-DSI-1/native_display_p3_mode
+    chown system system  /sys/class/drm/card0-DSI-1/native_display_p3_mode
     chmod 0666 /sys/class/drm/card0-DSI-1/native_display_wide_color_mode
+    chown system system /sys/class/drm/card0-DSI-1/native_display_wide_color_mode
     chmod 0666 /sys/class/drm/card0-DSI-1/native_display_srgb_color_mode
+    chown system system /sys/class/drm/card0-DSI-1/native_display_srgb_color_mode
     chmod 0666 /sys/class/drm/card0-DSI-1/hbm_brightness
+    chown system system /sys/class/drm/card0-DSI-1/hbm_brightness
     chmod 0666 /sys/devices/platform/soc/soc:qcom,dsi-display-primary/dynamic_dsi_clock
+    chown system system /sys/devices/platform/soc/soc:qcom,dsi-display-primary/dynamic_dsi_clock
     chown radio radio /sys/devices/platform/soc/soc:qcom,dsi-display-primary/dynamic_dsi_clock
     chown radio radio /proc/force_reset
     chmod 0666 /sys/class/drm/card0-DSI-1/native_display_loading_effect_mode
+    chown system system /sys/class/drm/card0-DSI-1/native_display_loading_effect_mode
     chmod 0666 /sys/class/drm/card0-DSI-1/native_display_customer_srgb_mode
+    chown system system /sys/class/drm/card0-DSI-1/native_display_customer_srgb_mode
     chmod 0666 /sys/class/drm/card0-DSI-1/native_display_customer_p3_mode
+    chown system system /sys/class/drm/card0-DSI-1/native_display_customer_p3_mode
     chmod 0666 /sys/class/drm/card0-DSI-1/dimlayer_bl_en
+    chown system system /sys/class/drm/card0-DSI-1/dimlayer_bl_en
     chmod 0666 /sys/class/drm/card0-DSI-1/dither_en
+    chown system system /sys/class/drm/card0-DSI-1/dither_en
 
 # v-takey.zheng@SYSTEM, 2020/06/03 Add for oemlogkit camera log
     chmod 0666 /sys/module/cam_debug_util/parameters/debug_mdl
