--- a/DeviceSettings/AndroidManifest.xml
+++ b/DeviceSettings/AndroidManifest.xml
@@ -55,18 +55,9 @@
         <activity android:name=".DeviceSettings" />
         <activity android:name=".KeyHandler" />
 
-        <activity
-            android:name="org.evolution.device.DeviceSettings.PanelSettingsActivity"
-            android:exported="true"
-            android:label="@string/panel_category_title"
-            android:launchMode="singleTask" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-
-        <receiver android:name="org.evolution.device.DeviceSettings.Startup" >
+        <receiver 
+            android:name="org.evolution.device.DeviceSettings.Startup" 
+            android:enabled="true">
             <intent-filter android:priority="100" >
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
@@ -75,20 +66,8 @@
         <!-- DC-Dimming tile -->
         <service
             android:name="org.evolution.device.DeviceSettings.DCModeTileService"
-            android:icon="@drawable/ic_dimming_off"
+            android:icon="@drawable/ic_dc_tile"
             android:label="@string/tile_dc_mode"
-            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
-            <intent-filter>
-                <action
-                    android:name="android.service.quicksettings.action.QS_TILE"/>
-            </intent-filter>
-        </service>
-
-        <!-- Panel mode's tile -->
-        <service
-            android:name="org.evolution.device.DeviceSettings.PanelModeTileService"
-            android:icon="@drawable/ic_panel_tile"
-            android:label="@string/tile_panel_mode"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
                 <action
@@ -107,9 +86,6 @@
                     android:name="android.service.quicksettings.action.QS_TILE"/>
             </intent-filter>
         </service>
-
-        <!-- Auto HBM service -->
-        <service android:name="org.evolution.device.DeviceSettings.AutoHBMService" />
 
         <!-- Refresh rate tile -->
         <service
@@ -140,6 +116,7 @@
                 android:exported="false">
         </service>
         
+        <!-- Log Tile -->
         <service
             android:name="org.evolution.device.DeviceSettings.LogTile"
             android:icon="@drawable/ic_qs_log"
@@ -151,6 +128,13 @@
             </intent-filter>
         </service>
 
+        <service android:name="org.evolution.device.DeviceSettings.HBMModeService"
+                 android:exported="false" />
+                 
+        <!-- Auto HBM service -->
+        <service android:name="org.evolution.device.DeviceSettings.AutoHBMService"
+		 android:exported="false" />
+                 
         <!-- Search indexing -->
         <provider
             android:name=".ConfigPanelSearchIndexablesProvider"
